--- a/src/index.scss
+++ b/src/index.scss
@@ -436,7 +436,7 @@ div.growlUI h1, div.growlUI h2 {
     background: url(gametable.png) no-repeat;
   }
 
-  .disable {
+  .disabled {
     opacity: 0.4 !important;
     cursor: not-allowed !important;
     color: rgba(255,255,255,0.4) !important;
