添加對BUYIN的支持

--- a/src/index.haml
+++ b/src/index.haml
@@ -115,7 +115,7 @@
             %button#cmd_buy{:type => 'command'} 確定
           .template
             .seat
-            .empty_seat 觀戰
+            .empty_seat 加入
             .playing_seat
               %label.nick
               %img.photo
