--- a/src/index.scss
+++ b/src/index.scss
@@ -479,6 +479,18 @@ div.growlUI h1, div.growlUI h2 {
     position: absolute;
   }
 
+  #cmd_cancel {
+    top: 600px;
+    left: 870px;
+    position: absolute;
+  }
+
+  #cmd_up {
+    top: 550px;
+    left: 870px;
+    position: absolute;
+  }
+
   #raise_range {
     position: absolute;
     left: 520px;
