--- a/src/index.haml
+++ b/src/index.haml
@@ -95,6 +95,8 @@
             %a#cmd_raise.action 加注
             %input#raise_range{:type => 'range', :value => 0, :max => 50, :min => 0}
             %input#raise_number{:type => 'number', :value => 0, :max => 50, :min => 0, :step => 1}
+          %a#cmd_up.action 起立
+          %a#cmd_cancel.action 退出
           .buyin
             %h3 參與游戏
             %table
