--- a/src/index.haml
+++ b/src/index.haml
@@ -123,4 +123,5 @@
               %img.photo
               %label.inplay
               %img.draw_card{:src => 'css/poker_back.png'}
+              %label.bet_lab
             .dealer
