--- a/src/index.scss
+++ b/src/index.scss
@@ -438,13 +438,57 @@ div.growlUI h1, div.growlUI h2 {
     @include auto-hide;
   }
 
-  .actions {
-    top: 550px;
-    left: 125px;
+  #logs {
     position: absolute;
+    top: 543px;
+    left: 155px;
+    width: 385px;
+    margin-left: 2px;
+    margin-right: 2px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    height: 70px;
+    resize: none;
+    border: 3px solid #cccccc;
+    padding: 5px;
+    -webkit-border-radius: 7px;
+    background-color: rgba(25,25,25,0.7);
   }
 
-  .action{
+  .actions {
+    top: 540px;
+    left: 570px;
+    position: absolute;
+
+    #cmd_check {
+      top: 50px;
+      left: 0px;
+      position: absolute;
+    }
+
+    #cmd_raise {
+      top: 50px;
+      left: 127px;
+      position: absolute;
+    }
+
+    #raise_range {
+      top: 65px;
+      left: 260px;
+      position: absolute;
+    }
+
+    #raise_number {
+      top: 20px;
+      left: 265px;
+      width: 118px;
+      height: 22px;
+      font-size: 15px;
+      position: absolute;
+    }
+  }
+
+  .action {
     @include s-font;
     width: 70px;
     height: 30px;
@@ -472,31 +516,17 @@ div.growlUI h1, div.growlUI h2 {
   }
 
   #cmd_cancel {
-    top: 600px;
-    left: 870px;
+    top: 590px;
+    left: 20px;
     position: absolute;
   }
 
   #cmd_up {
-    top: 550px;
-    left: 870px;
+    top: 540px;
+    left: 20px;
     position: absolute;
   }
 
-  #raise_range {
-    position: absolute;
-    left: 520px;
-    top: 32px;
-  }
-
-  #raise_number {
-    top: 5px;
-    left: 525px;
-    width: 118px;
-    height: 22px;
-    font-size: 15px;
-    position: absolute;
-  }
 
   .dealer {
     top: 70px;
