添加对起身和离开的支持

--- a/css/index.css
+++ b/css/index.css
@@ -384,7 +384,7 @@ strong.rank {
     top: 590px;
     left: 20px;
     position: absolute; }
-  #game #cmd_up {
+  #game #cmd_leave {
     top: 540px;
     left: 20px;
     position: absolute; }
