--- a/src/index.scss
+++ b/src/index.scss
@@ -541,7 +541,7 @@ strong.rank {
     position: absolute;
   }
 
-  #cmd_up {
+  #cmd_leave {
     top: 540px;
     left: 20px;
     position: absolute;
